compiler/stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_entrypoints_empty.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/diagnostics/entrypoints/empty.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × could not parse Riot ML source
   ╭─[tests/fixtures/diagnostics/entrypoints/empty.ml:2:1]
 1 │ 
   ╰────
  help: stage0 currently accepts top-level zero-argument fn declarations with
        println string bodies
