compiler/stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_entrypoints_missing_main.snap
---
source: tests/fixtures.rs
assertion_line: 127
expression: transcript
---
fixture: tests/fixtures/diagnostics/entrypoints/missing-main.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × missing main function
   ╭─[tests/fixtures/diagnostics/entrypoints/missing-main.ml:1:4]
 1 │ fn start() {
   ·    ──┬──
   ·      ╰── this function must be named main
 2 │   println("hello world")
   ╰────
  help: stage0 requires one entrypoint: fn main() { dbg("hello world") }
