compiler/stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_syntax_empty_receive.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/diagnostics/syntax/empty_receive.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × could not parse Riot ML source
   ╭─[tests/fixtures/diagnostics/syntax/empty_receive.ml:3:15]
 2 │   let worker = spawn {
 3 │     receive { }
   ·               ┬
   ·               ╰── receive expression needs at least one arm
 4 │   };
   ╰────
