compiler/stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_syntax_record_field_missing_comma.snap
---
source: tests/fixtures.rs
assertion_line: 1422
expression: transcript
---
fixture: tests/fixtures/diagnostics/syntax/record_field_missing_comma.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × could not parse Riot ML source
   ╭─[tests/fixtures/diagnostics/syntax/record_field_missing_comma.ml:4:37]
 3 │ fn main() {
 4 │   let value = span { text: "answer" line: 1 };
   ·                                     ──┬─
   ·                                       ╰── expected `,` between record fields
 5 │   println(value.text)
   ╰────
  help: insert a comma before the next field
